$Id$

2011-08-18 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.h, arp-scan.1: Raised default timeout from 100ms to 500ms.
	  It is suspected that the default timeout is too short in some
	  situations, and this may be one of the causes of duplicate responses.

	* arp-scan.h, link-bpf.c: Include <net/bpf.h> before arp-scan.h in
	  link-bpf.c, and remove conditional inclusion of <net/bpf.h> in
	  arp-scan.h. This causes <net/bpf.h> to be included before <pcap.h>
	  on all systems that use BPF, e.g. BSD and MacOS. This should prevent
	  the problems that occur on some of these systems, and remove the need
	  for conditional inclusion to prevent them.

	* arp-fingerprint: Added additional fingerprint for Linux 2.6 on
	  Amazon Kindle.

2011-07-31 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-fingerprint: Added fingerprint for GNU/Hurd

2011-07-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* Makefile.am: Added pkt-custom-request-vlan-llc.dat to EXTRA_DIST.

2011-03-07 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Incremented version to 1.8.1.

2011-03-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* Released arp-scan version 1.8.
	  tarball arp-scan-1.8.tar.gz, size 430221 bytes
	  md5sum be8826574ec566217eb7ca040fe472f9

	* configure.ac: Remove version number from AM_INIT_AUTOMAKE macro,
	  as this usage is obsolete now. Incremented version to 1.8.

	* ieee-oui.txt, ieee-iab.txt: Updated IEEE OUI and IAB listings from
	  IEEE website using get-oui and get-iab Perl scripts.

2011-02-26 Roy Hills <Roy.Hills@nta-monitor.com>

	* pkt-custom-request-vlan-llc.dat: New data file for check-packet
	  script containing custom ARP request with 802.1Q VLAN tag and
	  LLC/SNAP framing.

	* check-packet: Added check for custom ARP request with 802.1Q VLAN
	  tag and LLC/SNAP framing.

2011-02-25 Roy Hills <Roy.Hills@nta-monitor.com>

	* pkt-vlan-llc-response.pcap: New file containing an example of
	  an ARP reply with 802.1Q tag and LLC/SNAP framing. From a Cisco