@@ -6,7 +6,7 @@
 .\" notice and this notice are preserved.
 .\"
 .\" $Id$
-.TH ARP-SCAN 1 "January 31, 2011"
+.TH ARP-SCAN 1 "September 27, 2011"
 .\" Please adjust this date whenever revising the man page.
 .SH NAME
 arp-scan \- The ARP scanner
@@ -591,6 +591,9 @@ to the specified pcap savefile as well as being decoded
 and displayed. This savefile can be analysed with
 programs that understand the pcap file format, such as
 "tcpdump" and "wireshark".
+.TP
+.B --rtt or -D
+Display the packet round-trip time.
 .SH FILES
 .TP
 .I /usr/local/share/arp-scan/ieee-oui.txt
